main/tests/macro_err/starts_punct.stderr
error: expected identifier
 --> tests/macro_err/starts_punct.rs:3:11
  |
3 |     json!(+ then more)
  |           ^
